# credit-risk-pipeline

./: Makefile  README.md  convert.ipynb  pyproject.toml  requirements.txt  test.py
data/: predict_data.csv
data/processed_data/: y_test.csv  y_train.csv
models/: output_model.pkl
reports/: gradient_boosting_metrics.csv
src/: config.yaml  pipeline.py
src/data_preparation/: data_loader.py  preprocessor.py
src/evaluation/: validator.py
src/models/: model.py
v1/: pyproject.toml
v1/data/: predict_data.csv
v1/data/processed_data/: X_test.csv  y_test.csv
v1/models/: default_of_credit_card_clients_0.0.1.pkl  output_model_0.0.1.pkl
v1/reports/: gradient_boosting_metrics.csv  neural_network_metrics.csv
v1/src/: .gitignore  config.yaml  pipeline.py
v1/src/data/: preprocessor.py
v1/src/models/: model.py
v2/: pyproject.toml  train.py  utils.py
v2/config/: train.yaml
v2/config/features/: data_features.yaml
v2/config/model/: lgbm.yaml
v2/data/: data_loader.py  dataset.py  metrics.py  preprocess.py
v2/feature/: generate.py
v2/models/: base.py  callbacks.py  gbm.py  nn.py
v2/res/models/: lightgb-meta  lightgb-meta_fold1.lgb  lightgb-meta_fold2.lgb  lightgb-meta_fold3.lgb  lightgb-meta_fold4.lgb  lightgb-meta_fold5.lgb
